# pasture-health-cv

./: .dockerignore  .env.example  .gitignore  Brief_Project_A_Pasture_CV.md  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
infra/grafana/dashboards/: pasture.json
infra/grafana/provisioning/dashboards/: provider.yml
infra/postgres/: init.sql
infra/prometheus/: alerts.yml  prometheus.yml
notebooks/: 02_train_baseline.ipynb
scripts/: ablation.py  build_notebook_02.py  check_distribution.py  eval_metrics.py  eval_prophet.py  fetch_historical.py  prepare_data.py  rebuild_notebook.py  test_forecast.py  test_seasonal.py
src/pasture/api/: app.py  db.py  schemas.py
src/pasture/data/: dataset.py  lris_fetch.py  rasterize.py  sentinel_fetch.py  tiling.py
src/pasture/inference/: predictor.py
src/pasture/models/: factory.py  unet.py
src/pasture/monitoring/: drift.py  forecast.py  metrics.py  seasonal.py
src/pasture/training/: metrics.py  train.py
