[project]
name = "pasture-health-cv"
version = "0.1.0"
description = "Pasture/crop health segmentation from Sentinel-2 imagery — NZ agritech"
requires-python = ">=3.11"
dependencies = [
    "sentinelhub>=3.10",
    "rasterio>=1.3",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "python-dotenv>=1.0",
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "requests>=2.31",
    # Time series
    "prophet>=1.1",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pandera>=0.19",
    "prometheus-client>=0.20",
    "pillow>=10.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # ML
    "torch>=2.6",
    "torchvision>=0.21",
    "segmentation-models-pytorch>=0.3",
    "mlflow>=2.12",
    "albumentations>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pasture"]

# PyTorch CUDA 12.8 wheels (RTX 5080 / Blackwell)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py311"
